--- a/ui.ui
+++ b/ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>708</width>
-    <height>342</height>
+    <width>731</width>
+    <height>347</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,21 @@
    <string notr="true">background-color: rgb(34, 47, 62);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_2" rowstretch="2,1,2">
+   <layout class="QGridLayout" name="gridLayout_2" rowstretch="3,2,2">
+    <property name="leftMargin">
+     <number>10</number>
+    </property>
+    <property name="topMargin">
+     <number>10</number>
+    </property>
+    <property name="rightMargin">
+     <number>10</number>
+    </property>
+    <property name="bottomMargin">
+     <number>10</number>
+    </property>
     <item row="0" column="0">
-     <widget class="QLabel" name="main_label">
+     <widget class="QLabel" name="label">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
         <horstretch>0</horstretch>
@@ -64,13 +76,13 @@
        <number>10</number>
       </property>
       <property name="topMargin">
-       <number>10</number>
+       <number>15</number>
       </property>
       <property name="rightMargin">
        <number>10</number>
       </property>
       <property name="bottomMargin">
-       <number>10</number>
+       <number>15</number>
       </property>
       <item row="0" column="0">
        <widget class="QPushButton" name="input_images_button">
